--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xpf0000/js-scrollbar",
   "description": "javascript scrollbar",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": "xu pengfei",
   "license": "MIT",
   "main": "src/index.js",
@@ -33,10 +33,10 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
